--- a/server/package.json
+++ b/server/package.json
@@ -12,8 +12,10 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "@types/jsonwebtoken": "^9.0.1",
     "@types/node": "^18.11.19",
     "nodemon": "^2.0.20",
     "rimraf": "^4.1.2",
@@ -22,10 +24,13 @@
   },
   "dependencies": {
     "@prisma/client": "^4.9.0",
+    "bcrypt": "^5.1.0",
     "body-parser": "^1.20.1",
     "cors": "^2.8.5",
+    "dayjs": "^1.11.7",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
     "prisma": "^4.9.0",
     "zod": "^3.20.2"
   }
